# BlueHerring

./: .gitignore  BlueHerring  CMakeLists.txt  LichessAPI.py  Makefile  README.md  antonia.gerlach.readme.md  big_book.csv  bit_engine.hpp  board_t.cpp  board_t.h  board_t.hpp  book.hpp  castling_test.txt  engine.hpp  eval.hpp  file_util.hpp  hash.hpp  history.csv  input.txt  input_example.txt  main  main.cpp  move_eval.hpp  move_t.hpp  moves.hpp  operators_util.hpp  output_example.txt  piece_t.cpp  piece_t.hpp  pieces_t.cpp  pieces_t.h  play.sh  readme_sherab-losel.matos.md  simon.charbonneau.readme.md  small_book.csv  square_t.hpp  string_util.hpp  tests.hpp
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
personal_readme/: antonia.gerlach.readme.md  frederik.svane.readme.md  readme_sherab-losel.matos.md  simon.charbonneau.readme.md
